<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/main_activity_user_tt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="当前登录用户："
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/main_activity_change_user_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="修改用户"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/unlock_btn"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:text="@string/unlock_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/lock_btn"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:text="@string/lock_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/truck_btn"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:text="@string/truck_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/power_btn"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:text="@string/power_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/driver_btn"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:text="@string/driver_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>

</RelativeLayout>